kube/trackr-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackr-app-deployment
  namespace: trackr-namespace
  labels:
    app: eks-trackr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-trackr-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: eks-trackr-app
    spec:
      containers:
        - name: trackr-app
          image: 403188442647.dkr.ecr.us-east-2.amazonaws.com/trackr-eks, # fetch docker image from the ECR repo
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
