kube/carts-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-external
  namespace: trackr-namespace
spec:
  type: ExternalName
  externalName: db.example.com
