kube/trackr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-trackr-service
  namespace: trackr-namespace
  labels:
    app: eks-trackr-app
spec:
  type: LoadBalancer
  selector:
    app: eks-trackr-app
  ports:
    - name: http
      port: 8000
      targetPort: 8001
      protocol: TCP
