kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracker-ingress
  namespace: trackr-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tracker-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-trackr-service
                port:
                  number: 8000
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 8000
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts-service
                port:
                  number: 80
